--- a/custom_components/dahua_vto/manifest.json
+++ b/custom_components/dahua_vto/manifest.json
@@ -1,11 +1,11 @@
 {
   "domain": "dahua_vto",
   "name": "Dahua VTO",
-  "version": "1.0.7",
-  "documentation": "https://github.com/myhomeiot/DahuaVTO",
-  "issue_tracker": "https://github.com/myhomeiot/DahuaVTO/issues",
+  "version": "0.0.1",
+  "documentation": "https://github.com/esand/DahuaVTO",
+  "issue_tracker": "https://github.com/esand/DahuaVTO/issues",
   "requirements": [],
   "dependencies": [],
-  "codeowners": ["@myhomeiot"],
+  "codeowners": ["@esand"],
   "iot_class": "local_push"
 }
